版本1.1 新增熱門版型

--- a/index.html
+++ b/index.html
@@ -11,41 +11,18 @@
     <header>
         <h1>高雄旅遊資訊網</h1>
         <select id="select_box" name="請選擇行政區"></select>
+        <div class="btnBox">
+            <p>熱門行政區</p>
+            <ul class='hitoBtn_Box'>
+                <li class='hitoBtn hitoBtn01' data-hitoBtn='苓雅區'>苓雅區</li>
+                <li class='hitoBtn hitoBtn02' data-hitoBtn='三民區'>三民區</li>
+                <li class='hitoBtn hitoBtn03' data-hitoBtn='新興區'>新興區</li>
+                <li class='hitoBtn hitoBtn04' data-hitoBtn='鹽埕區'>鹽埕區</li>
+            </ul>
+        </div>
     </header>
     <section>
         <ul class='dataCardBox'>
-            <!-- <li class="dataCard">
-                <div class="picbox">
-                    <h3>高雄願景館</h3>
-                    <p>三民區</p>
-                </div>
-                <div class="txtbox">
-                    <div class="box">
-                        <div class="img">
-                            <img src="https://hexschool.github.io/JavaScript_HomeWork/assets/icons_clock.png" alt="">
-                        </div>
-                        <p>週二至週日10:00-18:00，每週一公休</p>
-                    </div>
-                    <div class="box">
-                        <div class="img">
-                            <img src="https://hexschool.github.io/JavaScript_HomeWork/assets/icons_pin.png" alt="">
-                        </div>
-                        <p>高雄市三民區建國二路318號</p>
-                    </div>
-                    <div class="box">
-                        <div class="img">
-                            <img src="https://hexschool.github.io/JavaScript_HomeWork/assets/icons_phone.png" alt="">
-                        </div>
-                        <p>886-7-2363357</p>
-                    </div>
-                </div>
-                <div class="visitBox">
-                    <div class="img">
-                        <img src="https://hexschool.github.io/JavaScript_HomeWork/assets/icons_tag.png" alt="">
-                    </div>
-                    <p>免費參觀</p>
-                </div>
-            </li> -->
         </ul>
         <ul class='pageNav'>
             <li class='pageNavLi' data-pagebtn='before'>&lt; prev</li>
