版本1.2 新增各地區標示及重新撰寫地區獲取資料邏輯

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <li class='hitoBtn hitoBtn01' data-hitoBtn='苓雅區'>苓雅區</li>
                 <li class='hitoBtn hitoBtn02' data-hitoBtn='三民區'>三民區</li>
                 <li class='hitoBtn hitoBtn03' data-hitoBtn='新興區'>新興區</li>
-                <li class='hitoBtn hitoBtn04' data-hitoBtn='鹽埕區'>鹽埕區</li>
+                <li class='hitoBtn hitoBtn04' data-hitoBtn='美濃區'>美濃區</li>
             </ul>
         </div>
     </header>
